--- a/src/app/pages/datatable/dtarchivodocumentos/dtarchivodocumentos.component.html
+++ b/src/app/pages/datatable/dtarchivodocumentos/dtarchivodocumentos.component.html
@@ -6,13 +6,13 @@
     <div class="orbe" style="--index: 4"></div>
 </div>
 
-<div class="container table-responsive mt-2">
+<div class="container table-responsive ">
     <div class="d-flex justify-content-end mb-2">
-        <button type="button" class="btn btn-primary ml-2 mt-2" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="cancelar()">
+        <button type="button" class="btn btn-primary ml-2 " id="archivo" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="cancelar()">
             <i class="fas fa-plus-plus"></i> Archivo
         </button>
     </div>
-    <table *ngIf="!isLoading" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
+    <table [ngClass]="{'table-responsive': true}" *ngIf="!isLoading" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
         <thead>
             <tr>
                 <th>N°</th>
@@ -29,7 +29,7 @@
                 <td>{{ i + 1 }}</td>
                 <td>{{ item.descripcion }}</td>
                 <td>{{ item.actualizado }}</td>
-                <td>{{ item.fechaLimite | date: 'dd-MM-yyyy' }}</td>
+                <td>{{ item.fechaLimite | date: 'yyyy-MM-dd HH:mm:ss' }}</td>
                 <td>{{ item.lectura == 0 ? 'Si' : 'No' }}</td>
                 <td>{{ item.disponible == 0 ? 'Si' : 'No' }}</td>
                <td style="text-align: center;">
@@ -93,7 +93,7 @@
                     </div>
                     <div class="col-md-4 mb-2">
                         <label class="form-label mt-2" for="fecha">Fecha limite disponible </label>
-                        <input type="date" class="form-control" id="fechaLimite" formControlName="fechaLimite">
+                        <input type="datetime-local" class="form-control" id="fechaLimite" formControlName="fechaLimite">
                     </div>
                     <!-- <div class="alert alert-danger mt-2" [hidden]="fechaLimite.valid || fechaLimite.pristine">
                         Debes seleccionar una fecha
