--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -13,7 +13,8 @@
         <ul class="d-flex align-items-center">
             <li class="nav-item dropdown pe-3">
                 <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-                    <img src="assets/img/profile-img.jpg" alt="Profile" class="rounded-circle">
+                    <!-- <img src="" alt="Profile" class="rounded-circle"> -->
+                    <img src="{{avatar}}" id="img" class="rounded-circle" alt="..." />
                     <span class="d-none d-md-block dropdown-toggle ps-2 spanText">{{ nombre }} {{ apellido }} <span>( {{ agencia }} )</span></span>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
@@ -33,24 +34,6 @@
                     <li>
                         <hr class="dropdown-divider">
                     </li>
-                    <!-- <li>
-                        <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
-                        <i class="bi bi-gear"></i>
-                        <span>Account Settings</span>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                     <li>
-                        <a class="dropdown-item d-flex align-items-center" href="pages-faq.html">
-                        <i class="bi bi-question-circle"></i>
-                        <span>Need Help?</span>
-                        </a>
-                    </li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li> -->
                     <li>
                         <a class="dropdown-item d-flex align-items-center" (click)="logout()">
                             <i class="bi bi-box-arrow-right"></i>
