--- a/src/app/pages/datatable/dtarchivodocumentos/dtarchivodocumentos.component.html
+++ b/src/app/pages/datatable/dtarchivodocumentos/dtarchivodocumentos.component.html
@@ -54,57 +54,58 @@
             <h5 class="modal-title" id="exampleModalLabel">Detalle del documento</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="modal-body">
-            <form [formGroup]="formDocumento" id="form">
-                <iframe src="" #myFrame style="width:100%; height:350px;" frameborder="0" id="filePDF"></iframe>
+        <div class="form">
+            <div class="modal-body">
+                <form [formGroup]="formDocumento" id="form">
+                    <iframe src="" #myFrame style="width:100%; height:350px;" frameborder="0" id="filePDF"></iframe>
 
-                <div class="mb-3">
-                    <label for="pdf" class="form-label">Selecciona el archivo</label>
-                    <input class="form-control" type="file" id="pdf" formControlName="pdf" (change)="changeArchivo($event)" required>
-                    <div class="alert alert-danger mt-2" [hidden]="pdf.valid || pdf.pristine">
-                        Debes seleccionar un archivo
+                    <div class="mb-3">
+                        <label for="pdf" class="form-label">Selecciona el archivo</label>
+                        <input class="form-control" type="file" id="pdf" formControlName="pdf" (change)="changeArchivo($event)" required>
+                        <div class="alert alert-danger mt-2" [hidden]="pdf.valid || pdf.pristine">
+                            Debes seleccionar un archivo
+                        </div>
                     </div>
-                </div>
-                <label for="descripcion" class="form-label">Descripción de archivo</label>
-                <input class="form-control" type="text" id="descripcion" formControlName="descripcion" placeholder="Agregar una descripción" required>
-                <div class="alert alert-danger mt-2" [hidden]="descripcion.valid || descripcion.pristine">
-                Debes agregar una pequeña descripción
-                </div>
-                <div class="row">
-                    <div class="col-md-4 mb-2">
-                        <label class="form-label mt-2">¿Solo lectura?</label>
-                        <select [(ngModel)]='ngSelectL' class="form-select" id="lectura" formControlName="lectura" required>
-                            <option value="0" selected>Si</option>
-                            <option value="1">No</option>
-                        </select>
+                    <label for="descripcion" class="form-label">Descripción de archivo</label>
+                    <input class="form-control" type="text" id="descripcion" formControlName="descripcion" placeholder="Agregar una descripción" required>
+                    <div class="alert alert-danger mt-2" [hidden]="descripcion.valid || descripcion.pristine">
+                    Debes agregar una pequeña descripción
                     </div>
-                    <div class="alert alert-danger mt-2" [hidden]="lectura.valid || lectura.pristine">
-                        Debes seleccionar una opción
+                    <div class="row">
+                        <div class="col-md-4 mb-2">
+                            <label class="form-label mt-2">¿Solo lectura?</label>
+                            <select [(ngModel)]='ngSelectL' class="form-select" id="lectura" formControlName="lectura" required>
+                                <option value="0" selected>Si</option>
+                                <option value="1">No</option>
+                            </select>
+                        </div>
+                        <div class="alert alert-danger mt-2" [hidden]="lectura.valid || lectura.pristine">
+                            Debes seleccionar una opción
+                        </div>
+                        <div class="col-md-4 mb-2">
+                            <label class="form-label mt-2">¿Disponible?</label>
+                            <select [(ngModel)]='ngSelectD' class="form-select" id="disponible" formControlName="disponible" required>
+                                <option value="0" selected>Si</option>
+                                <option value="1">No</option>
+                            </select>
+                        </div>
+                        <div class="alert alert-danger mt-2" [hidden]="disponible.valid || disponible.pristine">
+                            Debes seleccionar una opción
+                        </div>
+                        <div class="col-md-4 mb-2">
+                            <label class="form-label mt-2" for="fecha">Fecha limite disponible </label>
+                            <input type="datetime-local" class="form-control" id="fechaLimite" formControlName="fechaLimite">
+                        </div>
+                        <!-- <div class="alert alert-danger mt-2" [hidden]="fechaLimite.valid || fechaLimite.pristine">
+                            Debes seleccionar una fecha
+                        </div> -->
                     </div>
-                    <div class="col-md-4 mb-2">
-                        <label class="form-label mt-2">¿Disponible?</label>
-                        <select [(ngModel)]='ngSelectD' class="form-select" id="disponible" formControlName="disponible" required>
-                            <option value="0" selected>Si</option>
-                            <option value="1">No</option>
-                        </select>
-                    </div>
-                    <div class="alert alert-danger mt-2" [hidden]="disponible.valid || disponible.pristine">
-                        Debes seleccionar una opción
-                    </div>
-                    <div class="col-md-4 mb-2">
-                        <label class="form-label mt-2" for="fecha">Fecha limite disponible </label>
-                        <input type="datetime-local" class="form-control" id="fechaLimite" formControlName="fechaLimite">
-                    </div>
-                    <!-- <div class="alert alert-danger mt-2" [hidden]="fechaLimite.valid || fechaLimite.pristine">
-                        Debes seleccionar una fecha
-                    </div> -->
-                </div>
-            </form>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary cancelar" data-bs-dismiss="modal" (click)="cancelar()">Cancelar</button>
-            <button type="submit" id="btnAceptar" class="btn btn-success" data-bs-dismiss="modal" (click)="cargar()" [disabled]="!formDocumento.valid">Agregar</button>
-        </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary cancelar" data-bs-dismiss="modal" (click)="cancelar()">Cancelar</button>
+                <button type="submit" id="btnAceptar" class="btn btn-success" data-bs-dismiss="modal" (click)="cargar()" [disabled]="!formDocumento.valid">Agregar</button>
+            </div>
         </div>
     </div>
 </div>
