--- a/src/app/pages/datatable/dtevaluaciones/dtevaluaciones.component.html
+++ b/src/app/pages/datatable/dtevaluaciones/dtevaluaciones.component.html
@@ -20,19 +20,20 @@
                 <th>N°</th>
                 <th>Título</th>
                 <th>Descripción</th>
-                <th>Tipo de documento</th>
+                <th>Preguntas</th>
+                <th>Grupos</th>
                 <th>Fecha registro</th>
                 <th>Acciones</th>
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let item of listaDocumentos; let i = index;">
+            <tr *ngFor="let item of listaEvaluaciones; let i = index;">
                 <td>{{ i + 1 }}</td>
                 <td>{{ item.titulo }}</td>
                 <td>{{ item.nombreArchivo }}</td>
                 <td>{{ item.tipo }}</td>
                 <td>{{ item.created_at }}</td>
-               <td style="text-align: center;">
+                <td style="text-align: center;">
                     <!-- <a type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar" [routerLink]="['/dashboard/collaborator', item.id]">
                         <i class="bi bi-pencil-square"></i>
                     </a> -->
