--- a/src/app/pages/datatable/dtgrupos/dtgrupos.component.html
+++ b/src/app/pages/datatable/dtgrupos/dtgrupos.component.html
@@ -4,7 +4,7 @@
             <i class="fas fa-plus-plus"></i> Agregar Grupo
         </button>
     </div>
-    <table [ngClass]="{'table-responsive': true}" *ngIf="!isLoading" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
+    <table [ngClass]="{'table-responsive': true}" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
         <thead>
             <tr>
                 <th>N°</th>
@@ -20,16 +20,16 @@
         <tbody>
             <tr *ngFor="let item of listaGrupos; let i = index;">
                 <td>{{ i + 1 }}</td>
-                <td>{{ item.grupo }}</td>
+                <td>{{ item.nombre }}</td>
                 <td>{{ item.colaboradores }}</td>
-                <td>{{ item.apertura }}</td>
-                <td>{{ item.cierre }}</td>
-                <td>{{ item.ultimaModificacion | date: 'yyyy-MM-dd HH:mm:ss' }}</td>
-                <td>{{ item.fechaRegistro | date: 'yyyy-MM-dd HH:mm:ss' }}</td>
+                <td>{{ item.apertura | date: 'yyyy-MM-dd HH:mm:ss'}}</td>
+                <td>{{ item.cierre  | date: 'yyyy-MM-dd HH:mm:ss'}}</td>
+                <td>{{ item.ultimaModificacion  }}</td>
+                <td>{{ item.fechaRegistro }}</td>
                <td style="text-align: center;">
-                    <!-- <a type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar">
+                    <a type="button" class="btn btn-outline-primary" data-bs-toggle="tooltip" data-bs-placement="top" title="Editar">
                         <i class="bi bi-pencil-square"></i>
-                    </a> -->
+                    </a>
                     <a type="button" class="btn btn-outline-danger ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar" (click)="eliminar(item)">
                         <i class="bi bi-trash"></i>
                     </a>                   
@@ -41,71 +41,73 @@
 
 <div class="modal fade " id="staticBackdrop" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
     <div class="modal-dialog modal-xl card">
-      <div class="modal-content form ">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalToggleLabel">Detalle del grupo</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-            <form [formGroup]="formGrupos" id="form">
-                <div class="row">
-                    <div class="col-md-6 mb-2">
-                        <label for="nombre" class="form-label">Ingresa el nombre del grupo:</label>
-                        <input class="form-control" type="text" id="nombre" formControlName="nombre" placeholder="Agregar una nombre" required>
-                        <div class="alert alert-danger mt-2" [hidden]="nombre.valid || nombre.pristine">
-                            Debes agregar una nombre...
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-2">
-                        <label for="nombre" class="form-label">Inicia:</label>
-                        <input class="form-control" type="datetime-local" id="nombre" formControlName="nombre" placeholder="Agregar una fecha" required>
-                        <div class="alert alert-danger mt-2" [hidden]="nombre.valid || nombre.pristine">
-                            Debes agregar fecha de inica...
-                        </div>
-                    </div>
-                    <div class="col-md-3 mb-2">
-                        <label for="nombre" class="form-label">Termina:</label>
-                        <input class="form-control" type="datetime-local" id="nombre" formControlName="nombre" placeholder="Agregar una fecha" required>
-                        <div class="alert alert-danger mt-2" [hidden]="nombre.valid || nombre.pristine">
-                            Debes agregar fecha de finalización...
-                        </div>
-                    </div>
-                    <div class="col-md-12 mb-2 mt-4">
-                        <div class="mx-auto loader" *ngIf="isLoading">
-                            <div class="orbe" style="--index: 0"></div>
-                            <div class="orbe" style="--index: 1"></div>
-                            <div class="orbe" style="--index: 2"></div>
-                            <div class="orbe" style="--index: 3"></div>
-                            <div class="orbe" style="--index: 4"></div>
-                        </div>
-                        <table [ngClass]="{'table-responsive': true}" *ngIf="!isLoading" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
-                            <thead>
-                                <tr>
-                                    <th>N°</th>
-                                    <th>Nombre completo</th>
-                                    <th>Agencia</th>
-                                    <th>Cargo</th>
-                                    <th>¿Incluir?</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="let item of listaColaboradores; let i = index;">
-                                    <td>{{ i + 1 }}</td>
-                                    <td>{{ item.nombres }} {{ item.apellidos }}</td>
-                                    <td>{{ item.agencia}}</td>
-                                    <td>{{ item.cargo  }}</td>
-                                    <td><input id="inputCheck" type="checkbox"></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+        <div class="modal-content">
+            <div class="form">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalToggleLabel">Detalle del grupo</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-            </form>
+                <div class="modal-body">
+                    <form [formGroup]="formGrupos" id="form">
+                        <div class="row">
+                            <div class="col-md-6 mb-2">
+                                <label for="nombre" class="form-label">Ingresa el nombre del grupo:</label>
+                                <input class="form-control" type="text" id="nombre" formControlName="nombre" placeholder="Agregar una nombre" required>
+                                <div class="alert alert-danger mt-2" [hidden]="nombre.valid || nombre.pristine">
+                                    Debes agregar una nombre...
+                                </div>
+                            </div>
+                            <div class="col-md-3 mb-2">
+                                <label for="inicia" class="form-label">Inicia:</label>
+                                <input class="form-control" type="datetime-local" id="inicia" formControlName="inicia" placeholder="Agregar una fecha" required>
+                                <div class="alert alert-danger mt-2" [hidden]="inicia.valid || inicia.pristine">
+                                    Debes agregar fecha de inica...
+                                </div>
+                            </div>
+                            <div class="col-md-3 mb-2">
+                                <label for="termina" class="form-label">Termina:</label>
+                                <input class="form-control" type="datetime-local" id="termina" formControlName="termina" placeholder="Agregar una fecha" required>
+                                <div class="alert alert-danger mt-2" [hidden]="termina.valid || termina.pristine">
+                                    Debes agregar fecha de finalización...
+                                </div>
+                            </div>
+                            <div class="col-md-12 mb-2 mt-4">
+                                <div class="mx-auto loader" *ngIf="isLoading">
+                                    <div class="orbe" style="--index: 0"></div>
+                                    <div class="orbe" style="--index: 1"></div>
+                                    <div class="orbe" style="--index: 2"></div>
+                                    <div class="orbe" style="--index: 3"></div>
+                                    <div class="orbe" style="--index: 4"></div>
+                                </div>
+                                <table  *ngIf="!isLoading" datatable="datatable" [dtOptions]="dtOptions1" [dtTrigger]="dtTrigger1" class="table table-striped table-bordered row-border hover" id="table">
+                                    <thead>
+                                        <tr>
+                                            <th>N°</th>
+                                            <th>Nombre completo</th>
+                                            <th>Agencia</th>
+                                            <th>Cargo</th>
+                                            <th>¿Incluir?</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr *ngFor="let item of listaColaboradores; let i = index;">
+                                            <td class="user">{{ item.id }}</td>
+                                            <td >{{ item.nombres }} {{ item.apellidos }}</td>
+                                            <td>{{ item.agencia}}</td>
+                                            <td>{{ item.cargo  }}</td>
+                                            <td><input id="inputCheck" type="checkbox"></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary cancelar" data-bs-dismiss="modal" (click)="cancelar()">Cancelar</button>
+                    <button type="submit" id="btnAceptar" class="btn btn-success" data-bs-dismiss="modal" (click)="cargar()" [disabled]="!formGrupos.valid">Agregar</button>
+                </div>
+            </div>
         </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary cancelar" data-bs-dismiss="modal" (click)="cancelar()">Cancelar</button>
-            <button type="submit" id="btnAceptar" class="btn btn-success" data-bs-dismiss="modal" (click)="cargar()" [disabled]="!formGrupos.valid">Agregar</button>
-        </div>
-      </div>
     </div>
 </div>
