--- a/src/app/pages/datatable/dtpreguntas/dtpreguntas.component.html
+++ b/src/app/pages/datatable/dtpreguntas/dtpreguntas.component.html
@@ -5,7 +5,7 @@
             <i class="fas fa-plus-plus"></i> Agregar Pregunta
         </button>
     </div>
-    <table [ngClass]="{'table-responsive': true}" *ngIf="!isLoading" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
+    <table [ngClass]="{'table-responsive': true}" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
         <thead>
             <tr>
                 <th>N°</th>
@@ -40,62 +40,64 @@
 
 <div class="modal fade" id="exampleModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
     <div class="modal-dialog modal-xl card">
-      <div class="modal-content form">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalToggleLabel">Detalle de la pregunta</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-            <form [formGroup]="formPregunta" id="form">
-                <div class="row">
-                    <div class="col-md-10 mb-2">
-                        <label for="pregunta" class="form-label">Ingresa la pregunta:</label>
-                        <input class="form-control" type="text" id="pregunta" formControlName="pregunta" placeholder="Agregar una pregunta" required>
-                        <div class="alert alert-danger mt-2" [hidden]="pregunta.valid || pregunta.pristine">
-                            Debes agregar una pregunta...
-                        </div>
-                    </div>
-                    <div class="col-md-2 mt-4">
-                        <button type="submit" id="btnRespuesta" class="btn btn-success" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Respuesta</button>
-                    </div>
-                    <div class="col-md-12 mb-2 mt-4">
-                        <table [ngClass]="{'table-responsive': true}" *ngIf="!isLoading" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
-                            <thead>
-                                <tr>
-                                    <th>N°</th>
-                                    <th>Valor</th>
-                                    <th>¿Correcta?</th>
-                                    <th>Última modificación</th>
-                                    <th>Fecha registro</th>
-                                    <th>Acciones</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr *ngFor="let item of listaRespuestas; let i = index;">
-                                    <td>{{ i + 1 }}</td>
-                                    <td>{{ item.valor }}</td>
-                                    <td>{{ item.correcta  == 0 ? 'Si' : 'No' }}</td>
-                                    <td>{{ item.ultimaModificacion  }}</td>
-                                    <td>{{ item.fechaRegistro  }}</td>
-                                   <td style="text-align: center;">
-                                        <a type="button" class="btn btn-outline-danger ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar" (click)="eliminar(item)">
-                                            <i class="bi bi-trash"></i>
-                                        </a>                   
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+        <div class="modal-content">
+            <div class="form">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalToggleLabel">Detalle de la pregunta</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-            </form>
+                <div class="modal-body">
+                    <form [formGroup]="formPregunta" id="form">
+                        <div class="row">
+                            <div class="col-md-10 mb-2">
+                                <label for="pregunta" class="form-label">Ingresa la pregunta:</label>
+                                <input class="form-control" type="text" id="pregunta" formControlName="pregunta" placeholder="Agregar una pregunta" required>
+                                <div class="alert alert-danger mt-2" [hidden]="pregunta.valid || pregunta.pristine">
+                                    Debes agregar una pregunta...
+                                </div>
+                            </div>
+                            <div class="col-md-2 mt-4">
+                                <button type="submit" id="btnRespuesta" class="btn btn-success" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Respuesta</button>
+                            </div>
+                            <div class="col-md-12 mb-2 mt-4">
+                                <table [ngClass]="{'table-responsive': true}" *ngIf="!isLoading" datatable="datatable" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-bordered row-border hover" id="table">
+                                    <thead>
+                                        <tr>
+                                            <th>N°</th>
+                                            <th>Valor</th>
+                                            <th>¿Correcta?</th>
+                                            <th>Última modificación</th>
+                                            <th>Fecha registro</th>
+                                            <th>Acciones</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr *ngFor="let item of listaRespuestas; let i = index;">
+                                            <td>{{ i + 1 }}</td>
+                                            <td>{{ item.valor }}</td>
+                                            <td>{{ item.correcta  == 0 ? 'Si' : 'No' }}</td>
+                                            <td>{{ item.ultimaModificacion  }}</td>
+                                            <td>{{ item.fechaRegistro  }}</td>
+                                        <td style="text-align: center;">
+                                                <a type="button" class="btn btn-outline-danger ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="Eliminar" (click)="eliminar(item)">
+                                                    <i class="bi bi-trash"></i>
+                                                </a>                   
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary cancelar" data-bs-dismiss="modal" (click)="cancelar()">Cancelar</button>
+                    <button type="submit" id="btnAceptar" class="btn btn-success" data-bs-dismiss="modal" (click)="cargar()" [disabled]="!formPregunta.valid">Agregar</button>
+                </div>
+            </div>
         </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary cancelar" data-bs-dismiss="modal" (click)="cancelar()">Cancelar</button>
-            <button type="submit" id="btnAceptar" class="btn btn-success" data-bs-dismiss="modal" (click)="cargar()" [disabled]="!formPregunta.valid">Agregar</button>
-        </div>
-      </div>
     </div>
-  </div>
+</div>
 
   <div class="modal fade" id="exampleModalToggle2" aria-hidden="true" aria-labelledby="exampleModalToggleLabel2" tabindex="-1">
     <div class="modal-dialog modal-xl card">
