--- a/src/app/pages/tabs/tabevaluaciones/tabevaluaciones.component.html
+++ b/src/app/pages/tabs/tabevaluaciones/tabevaluaciones.component.html
@@ -19,7 +19,7 @@
                                     <div class="col-lg-12 col-md-12 col-sm-10">
                                         <div class="card">
                                         </div>
-                                        <app-dtpreguntas></app-dtpreguntas>
+                                        <app-dtpreguntas (eventoEnviarDataPregunta)="pasarDatos($event)"></app-dtpreguntas>
                                     </div>
                                 </div>
                             </div>
@@ -28,7 +28,7 @@
                                     <div class="col-lg-12 col-md-12 col-sm-10">
                                         <div class="card">
                                         </div>
-                                        <app-dtgrupos></app-dtgrupos>
+                                        <app-dtgrupos (eventoEnviarDataGrupo)="enviarDatos($event)"></app-dtgrupos>
                                     </div>
                                 </div>
                             </div>
